--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 }
 
 .uploadTitle {
-    color: #4375A3;
+    color: grey;
     margin: 20px 0;
 }
 
@@ -39,7 +39,7 @@ input[type="file"] {
     padding: 6px 12px;
     cursor: pointer;
     color: white;
-    background-color: rebeccapurple;
+    background-color: #D5252D;
     border-radius: 5px;
 }
 
@@ -80,7 +80,7 @@ input[type="file"] {
 }
 
 button {
-    background-color: #3CC602;
+    background-color: #D5252D;
     color: white;
     padding: 12px 35px;
     border: 0;
@@ -92,6 +92,9 @@ button {
 .rememberMe {
     margin-right: 24%;
     margin-bottom: 40px;
+    font-weight: 600;
+    font-size: 12px;
+    color: grey;	
 }
 
 .forgotPassword {
@@ -183,12 +186,18 @@ input[type=email]:focus {
     justify-content: center;
     display: flex;
     flex-direction: column;
+    font-weight: 600;
+    font-size: 12px;
+    color: grey;
 }
 
 .passwordLabel {
     justify-content: center;
     display: flex;
     flex-direction: column;
+    font-weight: 600;
+    font-size: 12px;
+    color: grey;
 }
 
 .signInCreateAccount {
@@ -211,4 +220,27 @@ input[type=email]:focus {
     font-size: 12px;
     color: grey;
     margin-bottom: 20px;
+}
+
+.text {
+    font-weight: 500;
+    font-size: 12px;
+    color: grey;
+    margin-bottom: 20px;
+}
+
+th {
+    font-weight: 800;
+    font-size: 12px;
+    color: grey;
+    margin-bottom: 20px;
+	text-align: left;
+}
+
+td {
+    font-weight: 600;
+    font-size: 12px;
+    color: grey;
+    margin-bottom: 20px;
+	text-align: left;
 }
